<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".profile.ui.BiographyFragment">

    <TextView
        android:id="@+id/formationTitle"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/formation"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/formationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorem" />


    <TextView
        android:id="@+id/yearsOfExperienceTitle"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/years_of_experience"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/yearsOfExperienceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dymy_year" />


    <TextView
        android:id="@+id/CertificationsTitle"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/certificaciones"
        android:textStyle="bold" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/certificatesChipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp">


    </com.google.android.material.chip.ChipGroup>


    <TextView
        android:id="@+id/SpecialitiesTitle"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/especialidades_title"
        android:textStyle="bold" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/specialitiesChipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/RecepieTitle"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/recetas"
        android:textStyle="bold" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/RecepieChipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp">

    </com.google.android.material.chip.ChipGroup>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/createRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/create_recipe" />


</LinearLayout>